# AsteroidsGame

./: CMakeLists.txt  Dockerfile  Game.cpp  README.md
lib/include/: nanosvg.h
src/: BackgroundScene.cpp  BackgroundScene.h  Game.cpp  GameFieldScene.cpp  GameFieldScene.h  GameObject.cpp  GameObject.h  GameOverScene.cpp  GameOverScene.h  GameState.cpp  GameState.h  Geometry.cpp  Geometry.h  LevelSpec.h  MagicNumbers.h  MenuItem.cpp  MenuItem.h  MenuScene.cpp  MenuScene.h  Rasterizer.cpp  Rasterizer.h  Resources.cpp  Resources.h  Scene.h  SceneManager.cpp  SceneManager.h
